Opened 3 years ago

Closed 3 years ago

#17778 closed bug (fixed)

[regression] Intel N6235 WiFi unstable, disconnects

Reported by: kim1963 Owned by: waddlesplash
Priority: normal Milestone: R1/beta4
Component: Drivers/Network/iprowifi4965 Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Wifi card Intel N6235 in the revision 56168 works poorly, unstable. It spontaneously disconnects and loses its wifi access point. Revision 56147 works perfectly, a stable wifi connection. It is likely that the bug appeared in the revision 56148 - 56158.

Attachments (9)

syslog (238.3 KB ) - added by kim1963 3 years ago.
screenshot38.png (24.5 KB ) - added by kim1963 3 years ago.
syslog56156 (249.4 KB ) - added by kim1963 3 years ago.
syslog.old56168-1 (512.0 KB ) - added by kim1963 3 years ago.
syslog56168-1 (140.7 KB ) - added by kim1963 3 years ago.
screenshot45.png (125.9 KB ) - added by kim1963 3 years ago.
syslogiprowifi4965-2-56177 (242.6 KB ) - added by kim1963 3 years ago.
syslog.old (512.1 KB ) - added by kim1963 3 years ago.
syslog.2 (236.6 KB ) - added by kim1963 3 years ago.

Change History (24)

by kim1963, 3 years ago

Attachment: syslog added

by kim1963, 3 years ago

Attachment: screenshot38.png added

comment:1 by waddlesplash, 3 years ago

Component: Network & Internet/WirelessDrivers/Network/iprowifi4965
Owner: changed from mmlr to waddlesplash
Summary: hrev56168 Intel wifi N6235 bad work[regression] Intel N6235 WiFi unstable, disconnects
KERN: [iprowifi4965] (iwn) iwn_tx_cmd: ni (0xffffffff80490000) or m (0xffffffffb39a5910) for idx 219 in queue 1 is not NULL!
KERN: : [iprowifi4965] device timeout

comment:2 by waddlesplash, 3 years ago

Can you please test with hrev56154 and see what happens? Either way, upload a syslog from that revision.

in reply to:  2 comment:3 by kim1963, 3 years ago

Replying to waddlesplash:

Can you please test with hrev56154 and see what happens? Either way, upload a syslog from that revision.

Two night images 56151 and 56156, no 56154 https://download.haiku-os.org/nightly-images/x86_64/

comment:4 by waddlesplash, 3 years ago

hrev56156 is fine to test with instead.

by kim1963, 3 years ago

Attachment: syslog56156 added

comment:5 by kim1963, 3 years ago

56156 - bug

comment:6 by waddlesplash, 3 years ago

I dug out the laptop I have which uses this driver (though with a much older device), and unfortunately the bug does not reproduce on hrev56168 here; the device works fine. I downloaded a bunch of stuff with no problems...

I guess we are going to have to go the old-fashioned route to debug this then. I'll build a test driver or two and we will go from there I suppose.

comment:7 by waddlesplash, 3 years ago

Here are two versions of the driver to test with. Please use the latest version of Haiku itself, and blocklist the driver before booting.

Test with the iprowifi4965-1 driver first. If it works, then test with the iprowifi4965-0 driver also. If it does not work, please upload a syslog. (If it does not work, then do not bother testing with iprowifi4965-0.)

by kim1963, 3 years ago

Attachment: syslog.old56168-1 added

by kim1963, 3 years ago

Attachment: syslog56168-1 added

comment:8 by kim1963, 3 years ago

iprowifi4965-1 - bug

by kim1963, 3 years ago

Attachment: screenshot45.png added

comment:9 by waddlesplash, 3 years ago

OK, thanks, that info was helpful. Try this version and see what happens, please.

by kim1963, 3 years ago

Attachment: syslogiprowifi4965-2-56177 added

comment:10 by kim1963, 3 years ago

Work fine ! 40 min stable connect

comment:11 by waddlesplash, 3 years ago

Excellent, that narrows down what the problem could be. This new version should behave the same as the previous one, but it will print a lot more information to the syslog, and hopefully I should be able to determine what the fix needs to be from that.

Please use it for a while (10-20min or so) and then upload a new syslog.

by kim1963, 3 years ago

Attachment: syslog.old added

comment:12 by kim1963, 3 years ago

23 min

comment:13 by waddlesplash, 3 years ago

Thanks. I think I found the bug this time; it was a monumentally stupid error on my part.

If this new driver works, I will commit the fix and close this ticket. Thanks again for your patience in testing this.

by kim1963, 3 years ago

Attachment: syslog.2 added

comment:14 by kim1963, 3 years ago

17 min syslog Work fine.

Last edited 3 years ago by kim1963 (previous) (diff)

comment:15 by waddlesplash, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: newclosed

I've committed the fix in hrev56182. Thank you very much for patiently testing all the different builds!

Note: See TracTickets for help on using tickets.