freebsd_network: Add missing store of the passed buffer length.

This broke bouncing of anything not an mbuf.
Confirmed to fix #17778, and may fix other problems too.